Adding some Annotations and adding data.